lint_output.txt

> react-example@0.0.0 lint /Users/macbookair/Documents/repo /promote_catalogue_gen
> tsc --noEmit

/Users/macbookair/Documents/repo /promote_catalogue_gen/node_modules/typescript/lib/_tsc.js:92
  for (let i = startIndex ?? 0; i < array.length; i++) {
                           ^

SyntaxError: Unexpected token '?'
    at Module._compile (internal/modules/cjs/loader.js:892:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:973:10)
    at Module.load (internal/modules/cjs/loader.js:812:32)
    at Function.Module._load (internal/modules/cjs/loader.js:724:14)
    at Module.require (internal/modules/cjs/loader.js:849:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/macbookair/Documents/repo /promote_catalogue_gen/node_modules/typescript/lib/tsc.js:8:18)
    at Module._compile (internal/modules/cjs/loader.js:956:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:973:10)
    at Module.load (internal/modules/cjs/loader.js:812:32)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! react-example@0.0.0 lint: `tsc --noEmit`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the react-example@0.0.0 lint script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /Users/macbookair/.npm/_logs/2026-03-28T11_09_05_146Z-debug.log
